--- a/TopiTunesAppsDemo/TopiTunesAppsDemo/Base.lproj/Main.storyboard
+++ b/TopiTunesAppsDemo/TopiTunesAppsDemo/Base.lproj/Main.storyboard
@@ -18,15 +18,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="81" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="K1z-h3-GBV">
-                                <rect key="frame" x="0.0" y="20" width="320" height="462"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="81" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="K1z-h3-GBV">
+                                <rect key="frame" x="0.0" y="64" width="320" height="419"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="customcell" rowHeight="81" id="oif-Rb-9Bl" customClass="Custom_TableViewCell" customModule="TopiTunesAppsDemo" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="113.5" width="320" height="81"/>
+                                        <rect key="frame" x="0.0" y="114" width="320" height="81"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oif-Rb-9Bl" id="etH-Fb-UHj">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="80.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bZK-Me-ZDg">
@@ -72,8 +72,29 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="VuG-5X-Lbg"/>
                                 </connections>
                             </tableView>
+                            <view alpha="0.20000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U3S-Y2-b3k" userLabel="Loading Overlay View">
+                                <rect key="frame" x="-4" y="0.0" width="328" height="568"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="nHm-XY-0xt">
+                                        <rect key="frame" x="145" y="266" width="37" height="37"/>
+                                    </activityIndicatorView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Loading . . ." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qZb-31-a53">
+                                        <rect key="frame" x="113" y="311" width="101" height="21"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="qZb-31-a53" firstAttribute="top" secondItem="nHm-XY-0xt" secondAttribute="bottom" constant="8" id="8o4-dI-d7w"/>
+                                    <constraint firstItem="qZb-31-a53" firstAttribute="centerX" secondItem="U3S-Y2-b3k" secondAttribute="centerX" id="FkF-Mk-WVA"/>
+                                    <constraint firstItem="nHm-XY-0xt" firstAttribute="centerY" secondItem="U3S-Y2-b3k" secondAttribute="centerY" id="bAa-wK-JV0"/>
+                                    <constraint firstItem="nHm-XY-0xt" firstAttribute="centerX" secondItem="qZb-31-a53" secondAttribute="centerX" id="w2g-eH-6Pc"/>
+                                </constraints>
+                            </view>
                             <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="RR6-d8-AFE">
-                                <rect key="frame" x="16" y="528" width="288" height="30"/>
+                                <rect key="frame" x="16" y="529" width="288" height="30"/>
                                 <subviews>
                                     <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="O6b-xw-gbj">
                                         <rect key="frame" x="0.0" y="0.0" width="94" height="29"/>
@@ -99,28 +120,27 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="Usj-ph-vJI">
-                                <rect key="frame" x="150" y="274" width="20" height="20"/>
-                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="RR6-d8-AFE" secondAttribute="bottom" constant="11" id="3hm-cr-kE8"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="U3S-Y2-b3k" secondAttribute="bottom" id="0aX-fV-oYA"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="RR6-d8-AFE" secondAttribute="bottom" constant="10" id="3hm-cr-kE8"/>
                             <constraint firstAttribute="trailingMargin" secondItem="RR6-d8-AFE" secondAttribute="trailing" id="9py-r2-gEg"/>
+                            <constraint firstItem="U3S-Y2-b3k" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="FFC-fk-zKL"/>
                             <constraint firstItem="K1z-h3-GBV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="RaU-mU-0Sq"/>
                             <constraint firstItem="K1z-h3-GBV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UAR-Wi-vhq"/>
                             <constraint firstAttribute="leadingMargin" secondItem="RR6-d8-AFE" secondAttribute="leading" id="YuT-8P-D8o"/>
                             <constraint firstItem="K1z-h3-GBV" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="bbf-UB-jnp"/>
-                            <constraint firstItem="Usj-ph-vJI" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="hzC-Ff-LZh"/>
-                            <constraint firstItem="Usj-ph-vJI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nUI-z2-gYh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="U3S-Y2-b3k" secondAttribute="trailing" constant="-20" id="mp7-Nc-W4L"/>
+                            <constraint firstItem="U3S-Y2-b3k" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="ssI-Ig-HGW"/>
                             <constraint firstItem="RR6-d8-AFE" firstAttribute="top" secondItem="K1z-h3-GBV" secondAttribute="bottom" constant="46" id="ttM-Wk-Doj"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="cxz-qh-kpi"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <outlet property="activityIndicator" destination="Usj-ph-vJI" id="7Xi-CS-fdg"/>
                         <outlet property="limitLabel" destination="B6P-5x-DDC" id="je6-cq-1Hj"/>
+                        <outlet property="overlayView" destination="U3S-Y2-b3k" id="Gxc-Il-lxd"/>
                         <outlet property="stepper" destination="O6b-xw-gbj" id="1FA-wr-1iO"/>
                         <outlet property="tableView" destination="K1z-h3-GBV" id="BKD-qk-HbV"/>
                     </connections>
